update email and mobile number labels

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,11 +23,11 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
         {% if site.email %}
-        <p>{{ site.email }}</p>
+        <p>Email: {{ site.email }}</p>
         {% endif %}
         
         {% if site.mobile %}
-        <p>{{ site.mobile }}</p>
+        <p>Mobile: {{ site.mobile }}</p>
         {% endif %}
 
         {% if site.github.is_project_page %}
