--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         {% endif %}
         
         {% if site.mobile %}
-        <p>Mobile: {{ site.mobile }}</p>
+        <p>Mobile: &plus;{{ site.mobile }}</p>
         {% endif %}
 
         {% if site.github.is_project_page %}
