--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,13 @@
     {% include head.html %}
     <body id="page-top" class="index">
     {% include nav.html %}
+
+    <!-- Begin Professional Portfolio -->
     {% include header.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
+    <!-- End Professional Portfolio -->
+    
     {% include interests_grid.html %}
 
     <!-- Begin Contact Sheet -->
