--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -49,12 +49,12 @@ hr.star-primary {
 
 hr.star-light:after,
 hr.star-primary:after {
-    content: "\f005";
+    content: "\f006";
     display: inline-block;
     position: relative;
     top: -.8em;
     padding: 0 .25em;
-    font-family: FontAwesome;
+    font-family: forkawesome;
     font-size: 2em;
 }
 
@@ -486,4 +486,18 @@ footer .footer-below {
 a img.dl-btn {
     width: 200px;
     height: 60px;
+}
+
+.portfolio-modal .modal-body .social-link {
+    margin: 8px;
+}
+
+.portfolio-modal .modal-body .social-link i,
+.portfolio-modal .modal-body .social-link span {
+    vertical-align: middle;
+}
+
+#profile-pic {
+    max-width: 300px;
+    height: auto;
 }
