--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-lg-offset-4">
-        <img class="img-responsive img-circle" src="img/profile.png" alt="profile-pic" />
+        <img id="profile-pic" class="img-responsive img-circle" src="img/profile.png" alt="profile-pic" />
       </div>
     </div>
     <div class="row">
