feat: migrate personal changes

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,27 +1,64 @@
 <!-- About Section -->
 <section class="success" id="about">
-  <div class="container">
+<div class="container">
+
     <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2>About</h2>
-        <hr class="star-light">
-      </div>
+        <div class="col-lg-12 text-center">
+            <h2>About The Dev</h2>
+            <hr class="star-light">
+        </div>
     </div>
+
     <div class="row">
-      <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
-      </div>
-      <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-      </div>
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Download Theme
-        </a>
-      </div>
+        <div class="col-lg-8 col-lg-offset-2 text-center">
+            <p>
+            <b>Edward James Remo</b> is a seasoned Software Full-stack Developer with <b>10 years of
+            development experience</b> in several platforms: <b>Mobile</b> (both native Android and iOS),
+            <b>web</b> (AngularJS, KnockoutJS) and <b>Server side</b> (Java, Spring Framework).
+            </p>
+            
+            <hr class="star-light">
+            
+            <p>
+            <b>Self-motivated</b> but also <b>great with working in teams</b> and with people. Values 
+            <b>high quality work</b> and is highly <b></b>motivated by challenges and new learnings.
+            </p>
+
+            <hr class="star-light">
+
+            <p>
+            Worked on mobile apps that deal with <b>location services</b>, reading <b>epub files</b>,
+            connecting to a <b>web server</b>, <b>remote config</b>, <b>remote logging</b>, <b>Android Jetpack</b>
+            libraries, <b>encryption</b>, and <b>detects root status</b>; and used different architectures 
+            (MVP+Clean, MVVM, experiments with Kotlin Multiplatform), and databases 
+            (Ormlite, Realm, Objectbox, Firebase).
+            </p>
+
+            <hr class="star-light">
+
+            <p>
+            Worked on web, using <b>Tomcat</b> and <b>SoftwareAG Integration Server</b>; and 
+            standalone <b>server applications</b>. And has multiple experiences with overseas 
+            secondment to client’s offices, for PSTs and production deployment.
+            </p>
+
+            <hr class="star-light">
+
+            <p>
+            Proficient in Kotlin, Java EE, Android, Swift, iOS, JavaScript, Spring 
+            Framework, SQLite, VB .NET (used in excel macro for generating SQL 
+            Scripts), MSSQL, Oracle SQL.
+            </p>
+
+            <hr class="star-light">
+
+            <p>
+            Knows how to navigate around on a Linux environment. Has rooted and 
+            installed custom ROMs on all of my phones.
+            </p>
+
+        </div>
     </div>
-  </div>
+
+</div>
 </section>
