--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -49,12 +49,12 @@ hr.star-primary {
 
 hr.star-light:after,
 hr.star-primary:after {
-    content: "\f005";
+    content: "\f006";
     display: inline-block;
     position: relative;
     top: -.8em;
     padding: 0 .25em;
-    font-family: FontAwesome;
+    font-family: forkawesome;
     font-size: 2em;
 }
 
@@ -195,19 +195,19 @@ section.success {
     }
 }
 
-#portfolio .portfolio-item {
+.gallery .portfolio-item {
     right: 0;
     margin: 0 0 15px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+.gallery .portfolio-item .portfolio-link {
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 400px;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption {
+.gallery .portfolio-item .portfolio-link .caption {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -218,11 +218,11 @@ section.success {
     transition: all ease .5s;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption:hover {
+.gallery .portfolio-item .portfolio-link .caption:hover {
     opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content {
+.gallery .portfolio-item .portfolio-link .caption .caption-content {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -233,21 +233,21 @@ section.success {
     color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+.gallery .portfolio-item .portfolio-link .caption .caption-content i {
     margin-top: -12px;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+.gallery .portfolio-item .portfolio-link .caption .caption-content h3,
+.gallery .portfolio-item .portfolio-link .caption .caption-content h4 {
     margin: 0;
 }
 
-#portfolio * {
+.gallery * {
     z-index: 2;
 }
 
 @media(min-width:767px) {
-    #portfolio .portfolio-item {
+    .gallery .portfolio-item {
         margin: 0 0 30px;
     }
 }
@@ -481,4 +481,23 @@ footer .footer-below {
 .modal.fade.in {
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
+}
+
+a img.dl-btn {
+    width: 200px;
+    height: 60px;
+}
+
+.portfolio-modal .modal-body .social-link {
+    margin: 8px;
+}
+
+.portfolio-modal .modal-body .social-link i,
+.portfolio-modal .modal-body .social-link span {
+    vertical-align: middle;
+}
+
+#profile-pic {
+    max-width: 300px;
+    height: auto;
 }
