--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,12 @@
 <header>
   <div class="container">
     <div class="row">
+      <div class="col-lg-4 col-lg-offset-4">
+        <img id="profile-pic" class="img-responsive img-circle" src="img/profile.png" alt="profile-pic" />
+      </div>
+    </div>
+    <div class="row">
       <div class="col-lg-12">
-        <img class="img-responsive" src="img/profile.png" alt="profile-pic" />
         <div class="intro-text">
           <span class="name">{{ site.title }}</span>
           <hr class="star-light" />
