--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,47 +1,114 @@
-<!-- Portfolio Modals -->
-{% for post in site.posts %}
-<div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog"
-  aria-hidden="true">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
+ <!-- Portfolio Modals -->
+ {% for post in site.posts %}
+    <div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>{{ post.title }}</h2>
+                            <hr class="star-primary">
+                            {% assign img_dir = "portfolio" %}
+                            {% if post.tags contains "interest" %}{% assign img_dir = "interest" %}{% endif %}
+                            
+                            {% if post.slides.size > 0 %}
+                                <div id="post_slides" class="carousel slide" data-ride="carousel">
+                                    
+                                    <div class="carousel-inner" role="listbox" style="padding: 0px;">
+                                        {% assign slide_index = 0 %}
+                                        {% for slide in post.slides %}
+                                        {% assign slide_index = slide_index | plus: 1 %}
+                                        <div class="item {% if slide_index == 1 %}active{% endif %}">
+                                            <img class="img-fluid" src="img/{{img_dir}}/{{slide}}" />
+                                        </div>
+                                        {% endfor %}
+                                    </div>
+                                    
+                                    <a class="left carousel-control" href="#post_slides" role="button" data-slide="prev">
+                                        <span class="icon-prev"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="right carousel-control" href="#post_slides" role="button" data-slide="next">
+                                        <span class="icon-next"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
+                            
+                            {% else %}
+                                <img src="img/{{img_dir}}/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                            
+                            {% endif %}
+                            
+                            {% if post.description %}
+                            <p>{{ post.description }}</p>
+                            {% endif %}
+                            
+                            {% if post.client || post.project-date || post.category %}
+                            <ul class="list-inline item-details">
+                                {% if post.client %}
+                                <li>Client:
+                                    <strong><a href="{{ post.client-url }}">{{ post.client }}</a>
+                                    </strong>
+                                </li>
+                                {% endif %}
+
+                                {% if post.project-date %}
+                                <li>Date:
+                                    <strong><a href="#">{{ post.project-date }}</a>
+                                    </strong>
+                                </li>
+                                {% endif %}
+
+                                {% if post.category %}
+                                <li>Service:
+                                    <strong><a href="#">{{ post.category }}</a>
+                                    </strong>
+                                </li>
+                                {% endif %}
+                            </ul>
+                            {% endif %}
+
+                            <!-- Begin App URLs -->
+                            {% if post.app-url %}
+                            <p>
+                                Home Page: <strong><a href="{{ post.app-url }}">{{ post.app-url }}</a></strong>
+                            </p>
+                            {% endif %}
+                            
+                            {% if post.playstore-url %}
+                            <div>
+                                <a href="{{ post.playstore-url }}"><img src="/img/playstore.png" class="dl-btn"/></a>
+                            </div>
+                            {% endif %}
+                            
+                            {% if post.appstore-url %}
+                            <div>
+                                <a href="{{ post.appstore-url }}"><img src="/img/appstore.png" class="dl-btn"/></a>
+                            </div>
+                            {% endif %}
+
+                            <div>
+                            {% if post.ig_username %}
+                                <a href="https://www.instagram.com/{{ post.ig_username }}" class="social-link"><i class="fa-instagram"></i>&nbsp;@{{ post.ig_username }}</a>
+                            {% endif %}
+
+                            {% if post.eyeem_username %}
+                                <a href="https://www.eyeem.com/u/{{ post.eyeem_username}}" class="social-link"><i class="fa-eyeem-o"></i>&nbsp;@{{ post.eyeem_username }}</a>
+                            {% endif %}
+                            </div>
+                            <!-- End App URLs -->
+
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>{{ post.title }}</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-            {% if post.description %}
-            <p>{{ post.description }}</p>
-            {% endif %}
-            <ul class="list-inline item-details">
-              {% if post.client %}
-              <li>Client:
-                <strong>{{ post.client }}</strong>
-              </li>
-              {% endif %}
-              {% if post.project-date %}
-              <li>Date:
-                <strong>{{ post.project-date }}</strong>
-              </li>
-              {% endif %}
-              {% if post.category %}
-              <li>Service:
-                <strong>{{ post.category }}</strong>
-              </li>
-              {% endif %}
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 {% endfor %}
