--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
-{% include head.html %}
+    {% include head.html %}
+    <body id="page-top" class="index">
+    {% include nav.html %}
 
-<body id="page-top" class="index">
-  {% include nav.html %}
-  {% include header.html %}
-  {% include portfolio_grid.html %}
-  {% include about.html %}
+    <!-- Begin Professional Portfolio -->
+    {% include header.html %}
+    {% include portfolio_grid.html %}
+    {% include about.html %}
+    <!-- End Professional Portfolio -->
+    
+    {% include interests_grid.html %}
 
-  {% if site.contact == "static" %}
-  {% include contact_static.html %}
-  {% elsif site.contact == "disqus" %}
-  {% include contact_disqus.html %}
-  {% else %}
-  {% include contact.html %}
-  {% endif %}
+    <!-- Begin Contact Sheet -->
+    {% if site.contact == "static" %}
+    {% include contact_static.html %}
+    {% elsif site.contact == "disqus" %}
+    {% include contact_disqus.html %}
+    {% else %}
+    {% include contact.html %}
+    {% endif %}
+    <!-- End Contact Sheet -->
 
-  {% include footer.html %}
-  {% include modals.html %}
-  {% include js.html %}
-</body>
-
+    {% include footer.html %}
+    {% include modals.html %}
+    {% include js.html %}
+    </body>
 </html>
